--- a/www.topmonks.com/src/html/contact/index.html
+++ b/www.topmonks.com/src/html/contact/index.html
@@ -67,7 +67,7 @@
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
           <h2>Offices</h2>
         </div>
-        <div class="mdc-layout-grid__cell address" itemprop="subOrganization" itemscope="" itemtype="https://schema.org/Organization"
+        <div class="box mdc-layout-grid__cell address" itemprop="subOrganization" itemscope="" itemtype="https://schema.org/Organization"
              id="prague">
           <h3 itemprop="name">Prague</h3>
           <span itemprop="legalName">TopMonks, s.r.o.</span>
@@ -78,38 +78,19 @@
               <span itemprop="addressLocality">Praha 4</span><br>
               <span itemprop="addressCountry">Czech Republic</span>
             </div>
-            <a href="https://mapy.cz/s/17lM6" class="button" data-marker="praha">show on map</a>
+            <a href="https://goo.gl/maps/SBK1BRsmgu22" class="button" data-marker="praha">show on map</a>
             <div itemprop="geo" itemscope="" itemtype="https://schema.org/GeoCoordinates">
               <meta itemprop="latitude" content="50.045386">
               <meta itemprop="longitude" content="14.491246">
             </div>
           </div>
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8">
+        <!--div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8">
           <a href="https://mapy.cz/s/17lM6">
             <img class="pure-img map" alt="Mapa k TopMonks Praha" src="/images/contact/contact-map.png">
           </a>
-        </div>
-        <div class="mdc-layout-grid__cell address" itemprop="subOrganization" itemscope="" itemtype="https://schema.org/Organization"
-             id="hradec-kralove">
-          <h3 itemprop="name">Hradec Králové</h3>
-          <span itemprop="legalName">TopMonks, s.r.o.</span>
-          <div itemprop="location" itemscope="" itemtype="https://schema.org/Place">
-            <div itemprop="address" itemscope="" itemtype="https://schema.org/PostalAddress">
-              <span>YMCA Hradec Králové</span><br>
-              <span itemprop="streetAddress">Šafaříkova 666/9</span><br>
-              <span itemprop="postalCode">500 02</span>
-              <span itemprop="addressLocality">Hradec Králové</span><br>
-              <span itemprop="addressCountry">Czech Republic</span>
-            </div>
-            <a href="https://mapy.cz/s/1ffy3" class="button" data-marker="hradec">show on map</a>
-            <div itemprop="geo" itemscope="" itemtype="https://schema.org/GeoCoordinates">
-              <meta itemprop="latitude" content="50.210235">
-              <meta itemprop="longitude" content="15.824641">
-            </div>
-          </div>
-        </div>
-        <div class="mdc-layout-grid__cell address" itemprop="subOrganization" itemscope="" itemtype="https://schema.org/Organization"
+        </div-->
+        <div class="box mdc-layout-grid__cell address" itemprop="subOrganization" itemscope="" itemtype="https://schema.org/Organization"
              id="ostrava">
           <h3 itemprop="name">Ostrava</h3>
           <span itemprop="legalName">TopMonks, s.r.o.</span>
@@ -120,14 +101,14 @@
               <span itemprop="addressLocality">Ostrava</span><br>
               <span itemprop="addressCountry">Czech Republic</span>
             </div>
-            <a href="https://mapy.cz/s/1ffxW" class="button" data-marker="ostrava">show on map</a>
+            <a href="https://goo.gl/maps/SkoWqfoKgg12" class="button" data-marker="ostrava">show on map</a>
             <div itemprop="geo" itemscope="" itemtype="https://schema.org/GeoCoordinates">
               <meta itemprop="latitude" content="49.8454375">
               <meta itemprop="longitude" content="18.2892897">
             </div>
           </div>
         </div>
-        <div class="mdc-layout-grid__cell address" itemprop="subOrganization" itemscope="" itemtype="https://schema.org/Organization"
+        <div class="box mdc-layout-grid__cell address" itemprop="subOrganization" itemscope="" itemtype="https://schema.org/Organization"
              id="san-jose">
           <h3 itemprop="name">San Jose</h3>
           <span itemprop="legalName">TopMonks LLC</span>
