--- a/www.topmonks.com/src/html/index.html
+++ b/www.topmonks.com/src/html/index.html
@@ -220,8 +220,8 @@ TopMonks - Software development partner for your business
       <div
         class="person mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop">
         <div class="person--photo">
-          <img sizes="100vw" srcset="http://res.cloudinary.com/topmonks/image/upload/w_183,q_auto,f_auto,dpr_auto/v1531382184/topmonks.com/img_contacts_kristy.jpg,
-            http://res.cloudinary.com/topmonks/image/upload/w_183,q_auto,f_auto,dpr_2/v1531382184/topmonks.com/img_contacts_kristy.jpg 2x" alt="[photo] Kristýna Sloupová"/>
+          <img sizes="100vw" srcset="https://res.cloudinary.com/topmonks/image/upload/w_183,q_auto,f_auto,dpr_auto/v1531382184/topmonks.com/img_contacts_kristy.jpg,
+            https://res.cloudinary.com/topmonks/image/upload/w_183,q_auto,f_auto,dpr_2/v1531382184/topmonks.com/img_contacts_kristy.jpg 2x" alt="[photo] Kristýna Sloupová"/>
         </div>
         <h4>Kristýna Sloupová</h4>
         <p>Senior Key Account Manager</p>
@@ -252,8 +252,8 @@ TopMonks - Software development partner for your business
       <div
         class="person mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop">
         <div class="person--photo">
-          <img sizes="100vw" srcset="http://res.cloudinary.com/topmonks/image/upload/w_183,q_auto,f_auto,dpr_auto/v1531382184/topmonks.com/img_contacts_gery.jpg,
-            http://res.cloudinary.com/topmonks/image/upload/w_183,q_auto,f_auto,dpr_2/v1531382184/topmonks.com/img_contacts_gery.jpg 2x" alt="[foto] Ladislav Gerencséry"/>
+          <img sizes="100vw" srcset="https://res.cloudinary.com/topmonks/image/upload/w_183,q_auto,f_auto,dpr_auto/v1531382184/topmonks.com/img_contacts_gery.jpg,
+            https://res.cloudinary.com/topmonks/image/upload/w_183,q_auto,f_auto,dpr_2/v1531382184/topmonks.com/img_contacts_gery.jpg 2x" alt="[foto] Ladislav Gerencséry"/>
         </div>
         <h4>Ladislav Gerencséry</h4>
         <p>Sales Account Manager</p>
