--- a/www.topmonks.com/src/html/shared/header.html
+++ b/www.topmonks.com/src/html/shared/header.html
@@ -11,7 +11,7 @@
         </div>
       </div>
       <div
-        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone">
+        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-2-tablet">
         <a class="tm-logo" href="/" title="Go to homepage">
           <svg class="monk" width="19px" height="23px" viewBox="0 0 19 23" version="1.1" xmlns="http://www.w3.org/2000/svg">
             <g transform="translate(-265.000000, -67.000000)">
