Correct billing addres, thnx @jaklradek

--- a/www.topmonks.com/src/html/contact/index.html
+++ b/www.topmonks.com/src/html/contact/index.html
@@ -166,8 +166,8 @@
           <span itemprop="legalName">TopMonks s.r.o.</span><br>
           <span itemprop="foundingLocation" itemscope="" itemtype="https://schema.org/Place">
           <span itemprop="address" itemscope="" itemtype="https://schema.org/PostalAddress">
-          <span itemprop="streetAddress">Jasná I. 1513/10</span><br>
-          <span itemprop="postalCode">147 00</span>
+          <span itemprop="streetAddress">Struhařovská 2931/9</span><br>
+          <span itemprop="postalCode">141 00</span>
           <span itemprop="addressLocality">Praha 4</span>
           </span>
           </span><br>
