--- a/www.topmonks.com/src/html/index.html
+++ b/www.topmonks.com/src/html/index.html
@@ -45,19 +45,19 @@ TopMonks - Software development partner for your business
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <h2><span class="box--purple">TopMonks</span></h2>
       </div>
-      <div class="mdc-layout-grid__cell box box--listen">
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet box box--listen">
           <h3>We listen</h3>
           <p>We see the time devoted to your project as an investment into your future.
             We listen to your ideas and needs and think about the best solution to do the project right the first
             time.</p>
       </div>
-      <div class="mdc-layout-grid__cell box box--develop">
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet box box--develop">
           <h3>We develop</h3>
           <p>We work with the latest technologies to get the best results. We don’t need lengthy training or
             explanations.
             We’ll provide you with a great team of senior developers who are ready to work immediately.</p>
       </div>
-      <div class="mdc-layout-grid__cell box box--verify">
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet box box--verify">
           <h3>We verify</h3>
           <p>We closely examine and test every idea and every feature in every step of the project.
             We concentrate on the needs of the end user. We don’t take risks. We don’t launch anything we don’t stand
