--- a/www.topmonks.com/src/html/shared/footer.html
+++ b/www.topmonks.com/src/html/shared/footer.html
@@ -4,7 +4,7 @@
 <div class="nav-and-contacts">
   <div class="tm-layout-wrapper mdc-layout-grid">
     <div class="mdc-layout-grid__inner">
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop">
         <h3>About</h3>
         <p>We are your software development partners, experienced with both startup and corporate environment.</p>
         <p>If you like these ideas, come and <a href="/company-values/">join us</a>, and have your <a
@@ -50,10 +50,10 @@
 <div class="copy-and-media">
   <div class="tm-layout-wrapper mdc-layout-grid">
     <div class="mdc-layout-grid__inner">
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop">
         <p>© 2018 TopMonks s.r.o., VAT ID: <span itemprop="vatID">CZ24847437</span></p>
       </div>
-      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-desktop">
+      <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop">
         <div class="social-buttons">
           <a href="https://www.linkedin.com/company/2294427" title="TopMonks on LinkedIn" rel="me" itemprop="sameAs"
              class="linkedin">
