--- a/www.topmonks.com/src/html/shared/header.html
+++ b/www.topmonks.com/src/html/shared/header.html
@@ -2,8 +2,7 @@
 <header class="tm-app-bar">
   <div class="mdc-layout-grid tm-layout-wrapper">
     <div class="mdc-layout-grid__inner">
-      <div
-        class="tm-hamburger mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone">
+      <div class="tm-hamburger mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-5-tablet">
         <div class="tm-hamburger__container">
           <div class="tm-hamburger__bar"></div>
           <div class="tm-hamburger__bar"></div>
@@ -11,7 +10,7 @@
         </div>
       </div>
       <div
-        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-2-tablet">
+        class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-phone mdc-layout-grid__cell--span-3-tablet">
         <a class="tm-logo" href="/" title="Go to homepage">
           <svg class="monk" width="19px" height="23px" viewBox="0 0 19 23" version="1.1" xmlns="http://www.w3.org/2000/svg">
             <g transform="translate(-265.000000, -67.000000)">
@@ -25,7 +24,7 @@
         </a>
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-8-desktop">
-        <nav id="navigation" class="tm-menu tm-menu--horizontal">
+        <nav id="navigation" class="tm-menu">
           <ul class="tm-menu__list">
             <li class=""><a href="/about-us/">about us</a></li>
             <li class=""><a href="/meet-us/">meet us</a></li>
@@ -44,7 +43,7 @@
     hamburger.addEventListener("click", toggleMenu(hamburger));
     function toggleMenu(hamburger) {
       return function(e) {
-        menu.classList.toggle("tm-menu--horizontal");
+        //menu.classList.toggle("tm-menu--horizontal");
         hamburger.classList.toggle("tm-hamburger__container--open");
         appBar.classList.toggle("tm-app-bar--open");
       }
@@ -67,5 +66,9 @@
         ticking = true;
       }
     });
+
+    if (window.matchMedia("(min-width: 841px)").matches) {
+      menu.classList.add("tm-menu--horizontal");
+    }
   </script>
 </header>
