Table improvements on subpages

--- a/www.topmonks.com/src/html/contact/index.html
+++ b/www.topmonks.com/src/html/contact/index.html
@@ -161,7 +161,7 @@
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
           <h2>Billing information</h2>
         </div>
-        <div class="box mdc-layout-grid__cell">
+        <div class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet">
           <h3>Billing address</h3>
           <span itemprop="legalName">TopMonks s.r.o.</span><br>
           <span itemprop="foundingLocation" itemscope="" itemtype="https://schema.org/Place">
@@ -175,7 +175,7 @@
 
           <div>Reg. No: 24847437<br> VAT ID: <span itemprop="vatID">CZ24847437</span></div>
         </div>
-        <div class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-6">
+        <div class="box mdc-layout-grid__cell mdc-layout-grid__cell--span-6 mdc-layout-grid__cell--span-8-tablet">
           <h3>Bank account</h3>
           <div>Bank: Raiffeisen Bank</div>
           <div>Account number: 780318/5500</div>
