--- a/www.topmonks.com/src/html/shared/footer.html
+++ b/www.topmonks.com/src/html/shared/footer.html
@@ -2,8 +2,8 @@
 
 <footer class="tm-footer">
 <div class="nav-and-contacts">
-  <div class="tm-layout-wrapper mdc-layout-grid">
-    <div class="mdc-layout-grid__inner">
+  <div class="mdc-layout-grid">
+    <div class="mdc-layout-grid__inner tm-layout-wrapper">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop">
         <h3>About</h3>
         <p>We are your software development partners, experienced with both startup and corporate environment.</p>
@@ -48,8 +48,8 @@
   </div>
 </div>
 <div class="copy-and-media">
-  <div class="tm-layout-wrapper mdc-layout-grid">
-    <div class="mdc-layout-grid__inner">
+  <div class="mdc-layout-grid">
+    <div class="mdc-layout-grid__inner tm-layout-wrapper">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop">
         <p>© 2018 TopMonks s.r.o., VAT ID: <span itemprop="vatID">CZ24847437</span></p>
       </div>
