Mobile and tablet refinements

--- a/www.topmonks.com/src/html/contact/index.html
+++ b/www.topmonks.com/src/html/contact/index.html
@@ -15,6 +15,22 @@
 <meta property="business:contact_data:email" content="info@topmonks.com"/>
 <meta property="business:contact_data:phone_number" content="+420 226 257 521"/>
 <meta property="business:contact_data:website" content="https://www.topmonks.com/"/>
+<style>
+  .box.address {
+    padding: 0;
+  }
+  .box.address .content {
+    padding: 0 16px 8px;
+  }
+  .box.address img {
+    margin: 0;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+  }
+  .box h3 {
+    text-align: left;
+  }
+</style>
 {% endblock %}
 
 {% block content %}
