--- a/www.topmonks.com/src/html/index.html
+++ b/www.topmonks.com/src/html/index.html
@@ -23,8 +23,8 @@ TopMonks - Software development partner for your business
 
 {% block content %}
 <section class="main-info jumbotron">
-  <div class="mdc-layout-grid tm-layout-wrapper">
-    <div class="mdc-layout-grid__inner">
+  <div class="mdc-layout-grid">
+    <div class="mdc-layout-grid__inner tm-layout-wrapper">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <h2 class="jumbotron__title">Team as a service</h2>
         <div class="box box--lead box--mobile-only">
@@ -40,8 +40,8 @@ TopMonks - Software development partner for your business
 </section>
 
 <section id="how-we-work" class="how-we-work">
-  <div class="mdc-layout-grid tm-layout-wrapper">
-    <div class="mdc-layout-grid__inner">
+  <div class="mdc-layout-grid">
+    <div class="mdc-layout-grid__inner tm-layout-wrapper">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <h2><span class="box--purple">TopMonks</span></h2>
       </div>
@@ -69,28 +69,30 @@ TopMonks - Software development partner for your business
 
 <section class="cooperation">
   <div class="tm-bgnd-wrapper">
-    <div class="mdc-layout-grid tm-layout-wrapper">
-      <div class="mdc-layout-grid__inner">
+    <div class="mdc-layout-grid">
+      <div class="mdc-layout-grid__inner tm-layout-wrapper">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
           <h2>You will love working with us</h2>
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-tablet">
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-tablet mdc-layout-grid__cell--span-8-desktop">
           <p class="box box--mobile-only">Our long-standing experience has resulted in deep, broad knowledge of the B2B world and start-up scene,
             and gives us the ability to apply various technology solutions, whether they are old or new.</p>
         </div>
-        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4">
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-tablet">
         </div>
         <div
-          class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4 mdc-layout-grid__cell--span-8-tablet">
+          class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-tablet">
           <p class="box">We will bring start-up playfulness and a fresh point of view to your project.</p>
           <p class="box box--purple">We respect the processes. Your company, your rules.</p>
           <p class="box">We are open and fair. We keep our promises.</p>
           <p class="box box--purple">We keep educating ourselves, you, and your children.</p>
         </div>
+        <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-2-tablet tm-layout-grid__cell--span-0-desktop">
+        </div>
         <div
-          class="mdc-layout-grid__cell mdc-layout-grid__cell--span-4 mdc-layout-grid__cell--span-8-tablet">
+          class="mdc-layout-grid__cell mdc-layout-grid__cell--span-6-tablet">
           <p class="box">We will guide you through and help you understand the world of IT.</p>
           <p class="box box--purple">We will help you stop worrying.</p>
           <p class="box">We can anticipate and minimize the risks associated with technical IT solutions.</p>
@@ -129,8 +131,8 @@ TopMonks - Software development partner for your business
 
 <section class="partners">
   <div class="tm-bgnd-wrapper">
-    <div class="mdc-layout-grid tm-layout-wrapper">
-      <div class="mdc-layout-grid__inner">
+    <div class="mdc-layout-grid">
+      <div class="mdc-layout-grid__inner tm-layout-wrapper">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
           <h2>Who works with&nbsp;us</h2>
           <ul class="tm-partners-list">
@@ -145,8 +147,8 @@ TopMonks - Software development partner for your business
 </section>
 
 <section class="tm-case-studies">
-  <div class="mdc-layout-grid tm-layout-wrapper">
-    <!--<div class="mdc-layout-grid__inner">-->
+  <div class="mdc-layout-grid">
+    <!--<div class="mdc-layout-grid__inner tm-layout-wrapper">-->
       <!--<div class="tm-case-studies__title mdc-layout-grid__cell mdc-layout-grid__cell&#45;&#45;span-12">-->
         <!--<h2>Case studies</h2>-->
         <!--<p class="sub-text">We have learned something from every collaboration with our clients.</p>-->
@@ -193,8 +195,8 @@ TopMonks - Software development partner for your business
 
 <section class="customers">
   <div class="tm-bgnd-wrapper">
-    <div class="mdc-layout-grid tm-layout-wrapper">
-      <div class="mdc-layout-grid__inner">
+    <div class="mdc-layout-grid">
+      <div class="mdc-layout-grid__inner tm-layout-wrapper">
         <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
           <h2>Our customers say that…</h2>
           <blockquote>
@@ -211,8 +213,8 @@ TopMonks - Software development partner for your business
 </section>
 
 <section class="contact">
-  <div class="mdc-layout-grid tm-layout-wrapper">
-    <div class="mdc-layout-grid__inner">
+  <div class="mdc-layout-grid">
+    <div class="mdc-layout-grid__inner tm-layout-wrapper">
       <div class="contact_title mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
         <h2>Contact</h2>
         <p>Do you have any questions? Are you interested in working with us? Contact us.</p>
