Smaller Sechovec, compatible images, typography

--- a/www.topmonks.com/src/html/index.html
+++ b/www.topmonks.com/src/html/index.html
@@ -222,13 +222,15 @@ TopMonks - Software development partner for your business
       <div
         class="person mdc-layout-grid__cell mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop">
         <div class="person--photo">
-          <img sizes="100vw" srcset="https://res.cloudinary.com/topmonks/image/upload/w_183,q_auto,f_auto,dpr_auto/v1531382184/topmonks.com/img_contacts_kristy.jpg,
-            https://res.cloudinary.com/topmonks/image/upload/w_183,q_auto,f_auto,dpr_2/v1531382184/topmonks.com/img_contacts_kristy.jpg 2x" alt="[photo] Kristýna Sloupová"/>
+          <img alt="[photo] Kristýna Sloupová"
+            src="https://res.cloudinary.com/topmonks/image/upload/w_183,q_auto,f_auto,dpr_auto/v1531382184/topmonks.com/img_contacts_kristy.jpg"
+            srcset="https://res.cloudinary.com/topmonks/image/upload/w_183,q_auto,f_auto,dpr_auto/v1531382184/topmonks.com/img_contacts_kristy.jpg,
+                    https://res.cloudinary.com/topmonks/image/upload/w_183,q_auto,f_auto,dpr_2/v1531382184/topmonks.com/img_contacts_kristy.jpg 2x">
         </div>
         <h4>Kristýna Sloupová</h4>
         <p>Senior Key Account Manager</p>
         <a class="mail" href="mailto:kristyna.sloupova@topmonks.com">kristyna.sloupova@topmonks.com</a><br>
-        <a class="phone" href="tel:+420733713555">+ 420 733 713 555</a><br>
+        <a class="phone" href="tel:+420733713555">+420&nbsp;733&nbsp;713&nbsp;555</a><br>
         <a href="https://www.linkedin.com/company/2294427" title="TopMonks on LinkedIn" rel="me" itemprop="sameAs"
            class="linkedin">
           <svg width="32px" height="32px" viewBox="0 0 32 32" version="1.1" xmlns="http://www.w3.org/2000/svg">
@@ -254,13 +256,15 @@ TopMonks - Software development partner for your business
       <div
         class="person mdc-layout-grid__cell--span-4-phone mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop">
         <div class="person--photo">
-          <img sizes="100vw" srcset="https://res.cloudinary.com/topmonks/image/upload/w_183,q_auto,f_auto,dpr_auto/v1531382184/topmonks.com/img_contacts_gery.jpg,
-            https://res.cloudinary.com/topmonks/image/upload/w_183,q_auto,f_auto,dpr_2/v1531382184/topmonks.com/img_contacts_gery.jpg 2x" alt="[foto] Ladislav Gerencséry"/>
+          <img alt="[foto] Ladislav Gerencséry"
+            src="https://res.cloudinary.com/topmonks/image/upload/w_183,q_auto,f_auto,dpr_auto/v1531382184/topmonks.com/img_contacts_gery.jpg"
+            srcset="https://res.cloudinary.com/topmonks/image/upload/w_183,q_auto,f_auto,dpr_auto/v1531382184/topmonks.com/img_contacts_gery.jpg,
+                    https://res.cloudinary.com/topmonks/image/upload/w_183,q_auto,f_auto,dpr_2/v1531382184/topmonks.com/img_contacts_gery.jpg 2x">
         </div>
         <h4>Ladislav Gerencséry</h4>
         <p>Sales Account Manager</p>
         <a class="mail" href="mailto:ladislav.gerencsery@topmonks.com">ladislav.gerencsery@topmonks.com</a><br>
-        <a class="phone" href="tel:+420606637915">+420 606 637 915</a><br>
+        <a class="phone" href="tel:+420606637915">+420&nbsp;606&nbsp;637&nbsp;915</a><br>
         <a href="https://www.linkedin.com/company/2294427" title="TopMonks on LinkedIn" rel="me" itemprop="sameAs"
            class="linkedin">
           <svg width="32px" height="32px" viewBox="0 0 32 32" version="1.1" xmlns="http://www.w3.org/2000/svg">
