svg backgrounds and logo updates
- added adler and zonky logos
- priceFx logo updated
- updated product section backgrounds

--- a/www.topmonks.com/src/html/index.html
+++ b/www.topmonks.com/src/html/index.html
@@ -139,6 +139,8 @@ TopMonks - Software development partner for your business
             <li>{{sprite('img_logo_cs')}}</li>
             <li>{{sprite('img_logo_erste-group')}}</li>
             <li>{{sprite('img_logo_pricefx')}}</li>
+            <li>{{sprite('img_logo_zonky')}}</li>
+            <li>{{sprite('img_logo_adler')}}</li>
           </ul>
         </div>
       </div>
@@ -224,7 +226,7 @@ TopMonks - Software development partner for your business
         <div class="person--photo">
           <img alt="[photo] Kristýna Sloupová"
             src="https://res.cloudinary.com/topmonks/image/upload/w_183,q_auto,f_auto,dpr_auto/v1531382184/topmonks.com/img_contacts_kristy.jpg"
-            srcset="https://res.cloudinary.com/topmonks/image/upload/w_183,q_auto,f_auto,dpr_auto/v1531382184/topmonks.com/img_contacts_kristy.jpg,
+            srcset="https://res.cloudinary.com/topmonks/image/upload/w_183,q_auto,f_auto,dpr_auto/v1531382184/topmonks.com/img_contacts_kristy.jpg 1x,
                     https://res.cloudinary.com/topmonks/image/upload/w_183,q_auto,f_auto,dpr_2/v1531382184/topmonks.com/img_contacts_kristy.jpg 2x">
         </div>
         <h4>Kristýna Sloupová</h4>
@@ -258,7 +260,7 @@ TopMonks - Software development partner for your business
         <div class="person--photo">
           <img alt="[foto] Ladislav Gerencséry"
             src="https://res.cloudinary.com/topmonks/image/upload/w_183,q_auto,f_auto,dpr_auto/v1531382184/topmonks.com/img_contacts_gery.jpg"
-            srcset="https://res.cloudinary.com/topmonks/image/upload/w_183,q_auto,f_auto,dpr_auto/v1531382184/topmonks.com/img_contacts_gery.jpg,
+            srcset="https://res.cloudinary.com/topmonks/image/upload/w_183,q_auto,f_auto,dpr_auto/v1531382184/topmonks.com/img_contacts_gery.jpg 1x,
                     https://res.cloudinary.com/topmonks/image/upload/w_183,q_auto,f_auto,dpr_2/v1531382184/topmonks.com/img_contacts_gery.jpg 2x">
         </div>
         <h4>Ladislav Gerencséry</h4>
