--- a/www.topmonks.com/src/html/shared/footer.html
+++ b/www.topmonks.com/src/html/shared/footer.html
@@ -21,7 +21,7 @@
             <li><a href="https://teams.topmonks.com/">Teams as Service</a></li>
             <li><a href="https://prodeti.topmonks.cz/">Programming for Kids</a></li>
             <li><a href="/references/">References</a></li>
-            <li><a href="/contacts/">Contacts</a></li>
+            <li><a href="/contact/">Contacts</a></li>
           </ul>
         </nav>
       </div>
