--- a/www.topmonks.com/src/html/index.html
+++ b/www.topmonks.com/src/html/index.html
@@ -26,7 +26,7 @@ TopMonks - Software development partner for your business
   <div class="mdc-layout-grid">
     <div class="mdc-layout-grid__inner tm-layout-wrapper">
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-12">
-        <h2 class="jumbotron__title">Team as a service</h2>
+        <h2 class="jumbotron__title">We are software developers</h2>
         <div class="box box--lead box--mobile-only">
           <blockquote class="jumbotron__lead">
             <p>And they are perfectionists. Ask them to build you a product, and they will
