--- a/www.topmonks.com/src/html/contact/index.html
+++ b/www.topmonks.com/src/html/contact/index.html
@@ -118,7 +118,7 @@
         </div-->
         <div class="box mdc-layout-grid__cell address" itemprop="subOrganization" itemscope="" itemtype="https://schema.org/Organization"
              id="ostrava">
-          <a href="https://goo.gl/maps/SBK1BRsmgu22" class="map" title="Show Ostrava Office on map">
+          <a href="https://goo.gl/maps/SkoWqfoKgg12" class="map" title="Show Ostrava Office on map">
             <img alt="[mapa] Ostrava" src="https://maps.googleapis.com/maps/api/staticmap?center=Sadová+1728/17,Ostrava&amp;zoom=15&amp;size=320x240&amp;maptype=roadmap&amp;markers=color:green%7Clabel:O%7C49.8454375,18.2892897&amp;key=AIzaSyCgsyl63h69YaF4_jdOcbGi1i4LefEFxRc"
                  srcset="https://maps.googleapis.com/maps/api/staticmap?center=Sadová+1728/17,Ostrava&amp;zoom=15&amp;size=320x240&amp;maptype=roadmap&amp;markers=color:green%7Clabel:O%7C49.8454375,18.2892897&amp;key=AIzaSyCgsyl63h69YaF4_jdOcbGi1i4LefEFxRc 1x,
                          https://maps.googleapis.com/maps/api/staticmap?center=Sadová+1728/17,Ostrava&amp;zoom=15&amp;size=320x240&amp;maptype=roadmap&amp;markers=color:green%7Clabel:O%7C49.8454375,18.2892897&amp;key=AIzaSyCgsyl63h69YaF4_jdOcbGi1i4LefEFxRc&amp;scale=2 2x"
@@ -144,7 +144,7 @@
         </div>
         <div class="box mdc-layout-grid__cell address" itemprop="subOrganization" itemscope="" itemtype="https://schema.org/Organization"
              id="san-jose">
-          <a href="https://goo.gl/maps/SBK1BRsmgu22" class="map" title="Show San Jose Office on map">
+          <a href="https://goo.gl/maps/YAJRUb1rDox" class="map" title="Show San Jose Office on map">
             <img alt="[mapa] San Jose" src="https://maps.googleapis.com/maps/api/staticmap?center=2+North+1st+St.,San+Jose,CA&amp;zoom=15&amp;size=320x240&amp;maptype=roadmap&amp;markers=color:red%7Clabel:S%7C37.336482,-121.8905285&amp;key=AIzaSyCgsyl63h69YaF4_jdOcbGi1i4LefEFxRc"
                  srcset="https://maps.googleapis.com/maps/api/staticmap?center=2+North+1st+St.,San+Jose,CA&amp;zoom=15&amp;size=320x240&amp;maptype=roadmap&amp;markers=color:red%7Clabel:S%7C37.336482,-121.8905285&amp;key=AIzaSyCgsyl63h69YaF4_jdOcbGi1i4LefEFxRc 1x,
                          https://maps.googleapis.com/maps/api/staticmap?center=2+North+1st+St.,San+Jose,CA&amp;zoom=15&amp;size=320x240&amp;maptype=roadmap&amp;markers=color:red%7Clabel:S%7C37.336482,-121.8905285&amp;key=AIzaSyCgsyl63h69YaF4_jdOcbGi1i4LefEFxRc&amp;scale=2 2x"
