broken links checker
- added broken-links-checker to repository
- fixed broken links in topmonks.com

--- a/www.topmonks.com/src/html/index.html
+++ b/www.topmonks.com/src/html/index.html
@@ -233,7 +233,7 @@ TopMonks - Software development partner for your business
         <p>Senior Key Account Manager</p>
         <a class="mail" href="mailto:kristyna.sloupova@topmonks.com">kristyna.sloupova@topmonks.com</a><br>
         <a class="phone" href="tel:+420733713555">+420&nbsp;733&nbsp;713&nbsp;555</a><br>
-        <a href="https://www.linkedin.com/company/2294427" title="TopMonks on LinkedIn" rel="me" itemprop="sameAs"
+        <a href="https://www.linkedin.com/in/krist%C3%BDna-sloupov%C3%A1-0a5b1579/" title="Krystýna Sloupová on LinkedIn" rel="me" itemprop="sameAs"
            class="linkedin">
           <svg width="32px" height="32px" viewBox="0 0 32 32" version="1.1" xmlns="http://www.w3.org/2000/svg">
             <title>linkedin</title>
@@ -267,7 +267,7 @@ TopMonks - Software development partner for your business
         <p>Sales Account Manager</p>
         <a class="mail" href="mailto:ladislav.gerencsery@topmonks.com">ladislav.gerencsery@topmonks.com</a><br>
         <a class="phone" href="tel:+420606637915">+420&nbsp;606&nbsp;637&nbsp;915</a><br>
-        <a href="https://www.linkedin.com/company/2294427" title="TopMonks on LinkedIn" rel="me" itemprop="sameAs"
+        <a href="https://www.linkedin.com/in/ladislavgerencsery/" title="Ladislav Gerencséry on LinkedIn" rel="me" itemprop="sameAs"
            class="linkedin">
           <svg width="32px" height="32px" viewBox="0 0 32 32" version="1.1" xmlns="http://www.w3.org/2000/svg">
             <title>linkedin</title>
