--- a/www.topmonks.com/src/html/shared/footer.html
+++ b/www.topmonks.com/src/html/shared/footer.html
@@ -9,7 +9,7 @@
         <p>We are your software development partners, experienced with both startup and corporate environment.</p>
         <p>If you like these ideas, come and <a href="/company-values/">join us</a>, and have your <a
           href="/references">project delivered by us</a>.
-          Or simply <a href="/contacts/">visit us</a>. We enjoy <a href="/meet-us/">meeting interesting people</a>.
+          Or simply <a href="/contact/">visit us</a>. We enjoy <a href="/meet-us/">meeting interesting people</a>.
         </p>
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-3-desktop">
@@ -54,7 +54,7 @@
       </div>
       <div class="mdc-layout-grid__cell mdc-layout-grid__cell--span-8-tablet mdc-layout-grid__cell--span-6-desktop">
         <div class="social-buttons">
-          <a href="https://www.linkedin.com/company/2294427" title="TopMonks on LinkedIn" rel="me" itemprop="sameAs"
+          <a href="https://www.linkedin.com/company/topmonks/" title="TopMonks on LinkedIn" rel="me" itemprop="sameAs"
              class="linkedin">
             <svg width="32px" height="32px" viewBox="0 0 32 32" version="1.1" xmlns="http://www.w3.org/2000/svg">
               <title>linkedin</title>
