--- a/www.topmonks.com/src/html/index.html
+++ b/www.topmonks.com/src/html/index.html
@@ -30,7 +30,7 @@ TopMonks - Software development partner for your business
         <div class="box box--lead box--mobile-only">
           <blockquote class="jumbotron__lead">
             <p>And they are perfectionists. Ask them to build you a product, and they will
-              not give you what you asked for. They will give you what you&nbsp;want.</p>
+              not give you what you asked for. They will just give you what you&nbsp;want.</p>
           </blockquote>
           <a class="action-button jumbotron__cta" href="#how-we-work">How we work</a>
         </div>
